--- a/css/style.css
+++ b/css/style.css
@@ -98,3 +98,9 @@ body{
     margin: 0px;
     padding: 0px;
 }
+/* media Query */
+@media only screen and (max-width:550px){
+    .qus-img{
+        width: 75%;
+    }
+}
