--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@ body{
    font-weight: 500;
 }
 /*------------------- Feature Bike  style------------*/
+*{
+    margin: 0px;
+    padding: 0px;
+}
 .fs-6{
     color:#E76F51;
     font-weight: 400;
@@ -98,9 +102,9 @@ body{
     margin: 0px;
     padding: 0px;
 }
-/* media Query */
-@media only screen and (max-width:550px){
-    .qus-img{
-        width: 75%;
-    }
-}
+ /* media Query */
+ @media only screen and (max-width:550px){
+        .qus-img{
+            width: 75%;
+            }
+} 
