--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ body{
     margin: 0px;
     padding: 0px;
 }
- /* media Query */
+ /*--------- media Query -----------*/
  @media only screen and (max-width:550px){
         .qus-img{
             width: 75%;
